Minor edits, show page not showing correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ nav a {
 }
 
 .content {
-   background: rgba(255,255,255,0.6);
+   background: rgba(255,255,255,0.8);
    padding: 40px;
    margin-top: 30px;
    margin-bottom: 30px;
